[package]
authors = ["y3km21 <y3km21@gmail.com>"]
edition = "2021"
name = "rayon-nbody-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
native = ["dep:docopt", "dep:env_logger", "dep:glium", "parallel"]
parallel = ["dep:rayon"]
web = ["dep:getrandom", "dep:getrandom", "dep:wasm-bindgen", "dep:wasm-logger", "dep:web-sys", "console_error_panic_hook"]
web-parallel = ["dep:wasm-bindgen-rayon", "parallel", "web"]

[dependencies]
cfg-if = '1'
cgmath = {version = "0.18", features = ["serde"]}
log = '0.4'
rand = "0.8"
rand_xorshift = "0.3"
serde = {version = "1", features = ["derive"]}

# parallel
rayon = {version = "1.5", optional = true}

# native
docopt = {version = "1", optional = true}
env_logger = {version = "0.9", optional = true}
glium = {version = "0.31", optional = true}

# web
console_error_panic_hook = {version = "0.1.6", optional = true}
getrandom = {version = "0.2", features = ["js"], optional = true}
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"], optional = true}
wasm-logger = {version = "0.2", optional = true}
web-sys = {version = "0.3", features = ["OffscreenCanvas", "WebGl2RenderingContext"], optional = true}
wee_alloc = {version = "0.4.5", optional = true}

# web parallel
wasm-bindgen-rayon = {version = "1", optional = true}

[dev-dependencies]
wasm-bindgen-test = {version = "0.3.13"}

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[example]]
crate-type = ["bin"]
name = "nbody"
